--- a/src/style/loginstyle/SignupPage.module.css
+++ b/src/style/loginstyle/SignupPage.module.css
@@ -8,7 +8,7 @@
 
 .box {
   width: 500px;
-  height: 550px;
+  height: 600px;
   display: flex; /* 자식 요소들을 flex container로 설정 */
   flex-direction: column; /* 자식 요소들을 세로 방향으로 배열 */
   justify-content: center; /* 수직 가운데 정렬 */
@@ -61,32 +61,32 @@ input::placeholder {
 }
 @media (max-width: 700px) {
   .box {
-    width: 300px;
-    height: 400px;
+    min-width: 400px;
+    height: 500px;
   }
   .title {
     font-size: 20px;
     margin-bottom: 10px;
   }
   .imageItem {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
   }
   input {
-    width: 180px;
-    height: 20px;
-    margin-bottom: 10px;
+    width: 200px;
+    height: 25px;
+    margin-bottom: 15px;
   }
   input::placeholder {
     font-size: 15px;
   }
   .caution,
   .loginsub a {
-    font-size: 10px;
+    font-size: 12px;
   }
   .finalCheck {
     width: 150px;
-    height: 30px;
+    height: 35px;
     line-height: 30px;
     font-size: 15px;
   }
