--- a/src/style/mypagestyle/MemInfo.module.css
+++ b/src/style/mypagestyle/MemInfo.module.css
@@ -7,8 +7,7 @@
 }
 
 .box {
-  min-width: 300px;
-  width: 100%;
+  width: 500px;
   height: 600px;
   display: flex; /* 자식 요소들을 flex container로 설정 */
   flex-direction: column; /* 자식 요소들을 세로 방향으로 배열 */
@@ -19,7 +18,7 @@
     rgba(82, 1, 32, 0.6) 0%,
     rgba(150, 43, 9, 0.6) 20%,
     rgba(181, 113, 20, 0.6) 40%,
-    rgba(8, 64, 62, 0.6) 60%,
+    rgba(8, 64, 62, 0.7) 60%,
     rgba(112, 101, 19, 0.6) 80%,
     rgba(82, 1, 32, 0.6) 100%
   );
@@ -30,64 +29,56 @@
   color: white;
   margin-bottom: 20px;
 }
-.imageItem {
-  width: 140px;
-  height: 140px;
-  background-image: url("../../img/loginpageimg/findglass.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 20px 0 50px 0;
-}
 input {
-  width: 200px;
+  width: 250px;
   height: 30px;
-  line-height: 20px;
-  color: white;
+  color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border: none;
   border-radius: 20px;
   padding: 5px 0 5px 10px;
-  margin-bottom: 15px; /* 원하는 마진 값으로 설정 */
+  margin-bottom: 20px; /* 원하는 마진 값으로 설정 */
 }
 input::placeholder {
   color: rgb(250, 250, 250);
+  font-size: 20px;
   font-style: inherit;
   padding-left: 5%;
 }
 .caution {
   font-size: 15px;
   position: relative;
-  min-height: 30px;
 }
 .finalCheck {
   width: 200px;
-  height: 50px;
-  line-height: 50px; /*텍스트 상하정렬*/
-  text-align: center; /* 텍스트 가운데 정렬 */
-  text-align: center;
-  font-size: 20px;
+  height: 60px;
+  line-height: 60px; /*텍스트 상하정렬*/
+  font-size: 25px;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 20px;
 }
 @media (max-width: 700px) {
   .box {
-    min-width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
+    padding: 10px;
   }
   .title {
     font-size: 20px;
     margin-bottom: 10px;
   }
   .imageItem {
-    width: 150px;
-    height: 150px;
-    margin: 30px 0;
+    width: 100px;
+    height: 100px;
   }
   input {
-    width: 200px;
-    height: 25px;
+    width: 180px;
+    height: 20px;
     margin-bottom: 10px;
+  }
+  input::placeholder {
+    font-size: 15px;
   }
   .caution,
   .loginsub a {
@@ -95,9 +86,8 @@ input::placeholder {
   }
   .finalCheck {
     width: 150px;
-    height: 35px;
-    line-height: 30px;
+    height: 40px;
+    line-height: 40px;
     font-size: 15px;
-    text-align: center;
   }
 }
