--- a/src/style/mypagestyle/SignOut.module.css
+++ b/src/style/mypagestyle/SignOut.module.css
@@ -19,7 +19,7 @@
     rgba(82, 1, 32, 0.6) 0%,
     rgba(150, 43, 9, 0.6) 20%,
     rgba(181, 113, 20, 0.6) 40%,
-    rgba(8, 64, 62, 0.6) 60%,
+    rgba(8, 64, 62, 0.7) 60%,
     rgba(112, 101, 19, 0.6) 80%,
     rgba(82, 1, 32, 0.6) 100%
   );
@@ -31,12 +31,12 @@
   margin-bottom: 20px;
 }
 .imageItem {
-  width: 140px;
-  height: 140px;
-  background-image: url("../../img/loginpageimg/findglass.png");
+  width: 150px;
+  height: 150px;
+  background-image: url("../../img/mypageimg/delete.png");
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 20px 0 50px 0;
+  margin: 20px 0;
 }
 input {
   width: 200px;
@@ -61,32 +61,31 @@ input::placeholder {
 }
 .finalCheck {
   width: 200px;
-  height: 50px;
-  line-height: 50px; /*텍스트 상하정렬*/
+  height: 60px;
+  line-height: 60px; /*텍스트 상하정렬*/
   text-align: center; /* 텍스트 가운데 정렬 */
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 20px;
 }
 @media (max-width: 700px) {
   .box {
-    min-width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
   }
   .title {
     font-size: 20px;
     margin-bottom: 10px;
   }
   .imageItem {
-    width: 150px;
-    height: 150px;
-    margin: 30px 0;
+    width: 100px;
+    height: 100px;
   }
   input {
-    width: 200px;
-    height: 25px;
+    width: 180px;
+    height: 20px;
     margin-bottom: 10px;
   }
   .caution,
@@ -95,8 +94,8 @@ input::placeholder {
   }
   .finalCheck {
     width: 150px;
-    height: 35px;
-    line-height: 30px;
+    height: 40px;
+    line-height: 40px;
     font-size: 15px;
     text-align: center;
   }
