--- a/src/style/loginstyle/FindPWPage.module.css
+++ b/src/style/loginstyle/FindPWPage.module.css
@@ -72,7 +72,7 @@ input::placeholder {
 }
 @media (max-width: 700px) {
   .box {
-    min-width: 400px;
+    width: 400px;
     height: 500px;
   }
   .title {
