--- a/src/style/loginstyle/SignupPage.module.css
+++ b/src/style/loginstyle/SignupPage.module.css
@@ -38,7 +38,7 @@ input {
   border: none;
   border-radius: 20px;
   /* padding: 5px 0 5px 10px; */
-  margin-bottom: 20px; /* 원하는 마진 값으로 설정 */
+  margin-bottom: 0; /* 원하는 마진 값으로 설정 */
 }
 input::placeholder {
   height: 30px;
@@ -46,6 +46,22 @@ input::placeholder {
   color: rgb(250, 250, 250);
   font-style: inherit;
   padding-left: 5%;
+}
+.hint {
+  margin-top: -5px;
+  margin-bottom: 10px;
+  margin-right: 40px;
+  justify-content: right;
+  font-weight: bold;
+  font-size: 8px;
+  color: #999;
+}
+.success {
+  color: royalblue;
+}
+.error {
+  font-size: 12px;
+  color: rgb(255, 0, 0);
 }
 .caution {
   font-size: 15px;
@@ -76,7 +92,7 @@ input::placeholder {
   input {
     width: 200px;
     height: 25px;
-    margin-bottom: 15px;
+    margin-bottom: 100px;
   }
   input::placeholder {
     font-size: 15px;
