--- a/src/style/loginstyle/loginpage.module.css
+++ b/src/style/loginstyle/loginpage.module.css
@@ -40,6 +40,20 @@ input::placeholder {
   color: rgb(250, 250, 250);
   font-style: inherit;
 }
+.hint {
+  margin-top: -5px;
+  margin-bottom: 10px;
+  margin-right: 40px;
+  justify-content: right;
+  font-size: 12px;
+  color: #999;
+}
+.success {
+  color: royalblue;
+}
+.error {
+  color: red;
+}
 .imageItem {
   width: 150px;
   height: 150px;
