--- a/src/style/loginstyle/FindIDPage.module.css
+++ b/src/style/loginstyle/FindIDPage.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: 500px;
+  width: 600px;
+  height: 700px;
   display: flex; /* 부모 요소를 flex container로 설정 */
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center; /* 수직 가운데 정렬 */
@@ -7,9 +8,8 @@
 }
 
 .box {
-  min-width: 500px;
-  width: auto;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   display: flex; /* 자식 요소들을 flex container로 설정 */
   flex-direction: column; /* 자식 요소들을 세로 방향으로 배열 */
   justify-content: center; /* 수직 가운데 정렬 */
