--- a/src/style/loginstyle/SignupPage.module.css
+++ b/src/style/loginstyle/SignupPage.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: 500px;
+  width: 600px;
+  height: 700px;
   display: flex; /* 부모 요소를 flex container로 설정 */
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center; /* 수직 가운데 정렬 */
@@ -7,9 +8,8 @@
 }
 
 .box {
-  min-width: 500px;
-  width: auto;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   display: flex; /* 자식 요소들을 flex container로 설정 */
   flex-direction: column; /* 자식 요소들을 세로 방향으로 배열 */
   justify-content: center; /* 수직 가운데 정렬 */
@@ -31,35 +31,37 @@
   margin-bottom: 20px;
 }
 input {
-  width: 10px;
-  height: 30px;
+  width: 400px !important;
+  height: 50px !important;
+  font-size: 25px !important;
+  text-align: left !important;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border: none;
   border-radius: 20px;
   /* padding: 5px 0 5px 10px; */
-  margin-bottom: 0; /* 원하는 마진 값으로 설정 */
+  margin-bottom: 20px !important; /* 원하는 마진 값으로 설정 */
 }
 input::placeholder {
-  height: 30px;
-  line-height: 30px;
+  height: 40px;
   color: rgb(250, 250, 250);
   font-style: inherit;
   padding-left: 5%;
 }
+
 .hint {
-  margin-top: -5px;
-  margin-bottom: 10px;
-  margin-right: 40px;
-  justify-content: right;
-  font-weight: bold;
-  font-size: 8px;
+  width: 100%;
   color: #999;
+}
+span{
+  width: 400px;
 }
 .success {
   color: royalblue;
 }
 .error {
+  position: absolute;
+  margin-left: auto;
   font-size: 12px;
   color: rgb(255, 0, 0);
 }
@@ -78,8 +80,8 @@ input::placeholder {
 }
 @media (max-width: 700px) {
   .box {
-    min-width: 400px;
-    height: 500px;
+    width: 400px;
+    height: 600px;
   }
   .title {
     font-size: 20px;
@@ -90,12 +92,12 @@ input::placeholder {
     height: 150px;
   }
   input {
-    width: 200px;
-    height: 25px;
+    width: 300px !important;
+    height: 40px !important;
     margin-bottom: 100px;
   }
   input::placeholder {
-    font-size: 15px;
+    font-size: 20px !important;
   }
   .caution,
   .loginsub a {
