마이페이지 모달, 더보기버튼, 스타일 완료

--- a/src/style/mypagestyle/MypageStyle.scss
+++ b/src/style/mypagestyle/MypageStyle.scss
@@ -40,7 +40,7 @@ h2 {
   justify-content: center;
 }
 .contents {
-  width: 1150px;
+  width: 70%;
   padding: 10px;
   border: none;
   border-radius: 30px;
