--- a/src/style/mypagestyle/MemInfo.module.css
+++ b/src/style/mypagestyle/MemInfo.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 100%;
   display: flex; /* 부모 요소를 flex container로 설정 */
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center; /* 수직 가운데 정렬 */
@@ -7,8 +7,9 @@
 }
 
 .box {
-  width: 40%;
-  height: 760px;
+  width: 580px;
+  height: 100%;
+  padding: 20px;
   display: flex; /* 자식 요소들을 flex container로 설정 */
   flex-direction: column; /* 자식 요소들을 세로 방향으로 배열 */
   justify-content: center; /* 수직 가운데 정렬 */
@@ -27,37 +28,40 @@
 .title {
   font-size: 30px;
   color: white;
-  margin-bottom: 20px;
+  margin: 50px 0 20px 0;
 }
 input {
-  width: 300px;
-  height: 30px;
+  width: 60%;
+  height: 40px;
+  font-size: 20px;
+  text-align: left;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border: none;
   border-radius: 20px;
-  text-align: center;
-  padding-left: 0px;
-  font-size: 16px;
+  padding-left: 30px;
   margin-bottom: 30px; /* 원하는 마진 값으로 설정 */
-  box-sizing: border-box;
 }
 input::placeholder {
+  font-size: 20px;
   color: rgb(250, 250, 250);
-  font-size: 16px;
-  font-style: inherit;
   padding-left: 0;
 }
-
+.juminInput::placeholder {
+  color: gray;
+}
+.idInput::placeholder {
+  color: gray;
+}
 .caution {
   font-size: 15px;
   position: relative;
 }
 .finalCheck {
   width: 200px;
-  height: 60px;
-  line-height: 60px; /*텍스트 상하정렬*/
-  font-size: 25px;
+  height: 50px;
+  line-height: 50px; /*텍스트 상하정렬*/
+  font-size: 20px;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 20px;
