--- a/src/style/mypagestyle/SignOut.module.css
+++ b/src/style/mypagestyle/SignOut.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 500px;
+  width: 100%;
   display: flex; /* 부모 요소를 flex container로 설정 */
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center; /* 수직 가운데 정렬 */
@@ -7,9 +7,9 @@
 }
 
 .box {
-  min-width: 300px;
-  width: 100%;
-  height: 600px;
+  width: 580px;
+  height: 691px;
+  padding: 20px;
   display: flex; /* 자식 요소들을 flex container로 설정 */
   flex-direction: column; /* 자식 요소들을 세로 방향으로 배열 */
   justify-content: center; /* 수직 가운데 정렬 */
@@ -19,7 +19,7 @@
     rgba(82, 1, 32, 0.6) 0%,
     rgba(150, 43, 9, 0.6) 20%,
     rgba(181, 113, 20, 0.6) 40%,
-    rgba(8, 64, 62, 0.7) 60%,
+    rgba(8, 64, 62, 0.6) 60%,
     rgba(112, 101, 19, 0.6) 80%,
     rgba(82, 1, 32, 0.6) 100%
   );
@@ -39,20 +39,21 @@
   margin: 20px 0;
 }
 input {
-  width: 200px;
-  height: 30px;
-  line-height: 20px;
-  color: white;
+  width: 60%;
+  height: 40px;
+  font-size: 20px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border: none;
   border-radius: 20px;
-  padding: 5px 0 5px 10px;
-  margin-bottom: 15px; /* 원하는 마진 값으로 설정 */
+  padding-left: 30px;
+  margin-bottom: 30px; /* 원하는 마진 값으로 설정 */
 }
 input::placeholder {
+  font-size: 20px;
   color: rgb(250, 250, 250);
-  font-style: inherit;
-  padding-left: 5%;
+  padding-left: 0;
 }
 .caution {
   font-size: 15px;
@@ -61,11 +62,9 @@ input::placeholder {
 }
 .finalCheck {
   width: 200px;
-  height: 60px;
-  line-height: 60px; /*텍스트 상하정렬*/
-  text-align: center; /* 텍스트 가운데 정렬 */
-  text-align: center;
-  font-size: 25px;
+  height: 50px;
+  line-height: 50px; /*텍스트 상하정렬*/
+  font-size: 20px;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 20px;
