--- a/src/style/mypagestyle/SignOut.module.css
+++ b/src/style/mypagestyle/SignOut.module.css
@@ -68,6 +68,7 @@ input::placeholder {
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 20px;
+  cursor: pointer;
 }
 @media (max-width: 700px) {
   .box {
