--- a/src/style/mypagestyle/MypageStyle.scss
+++ b/src/style/mypagestyle/MypageStyle.scss
@@ -16,22 +16,8 @@ button {
   font-size: 20px;
   cursor: pointer;
 }
-@media (max-width: 700px) {
-  button {
-    font-size: 15px;
-    width: 80px;
-    height: 32px;
-    transition: 0.5s;
-  }
-}
 h2 {
   color: white;
-}
-@media (max-width: 700px) {
-  h2 {
-    font-size: 15px;
-    transition: 0.5s;
-  }
 }
 .container {
   font-size: 16px;
@@ -70,23 +56,11 @@ h2 {
   align-items: center;
   justify-content: space-between;
 }
-@media (max-width: 700px) {
-  .profile {
-    flex-flow: column;
-    transition: 0.5s;
-  }
-}
 .person {
   width: 450px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-@media (max-width: 700px) {
-  .person {
-    flex-flow: column;
-    transition: 0.5s;
-  }
 }
 .img {
   width: 130px;
@@ -96,23 +70,20 @@ h2 {
   background-size: contain;
   position: fixed;
 }
-.person span {
-  width: 70px;
-  font-size: 20px;
-  font-weight: 700;
-  color: #000000;
+.nameAndBtn {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  align-items: center;
 }
-@media (max-width: 700px) {
-  .person span {
-    font-size: 15px;
-    font-weight: 700;
-    color: #000000;
-  }
-}
-.person p {
+.nameAndBtn p {
   color: white;
 }
-
+.nameAndBtn span {
+  color: #000000;
+  font-weight: bold;
+  font-size: 20px;
+}
 .alinfo {
   display: flex;
   align-items: center;
@@ -150,12 +121,6 @@ h2 {
   color: white;
   background-color: rgba($color: #000000, $alpha: 0.5);
 }
-@media (max-width: 700px) {
-  .reviewbox {
-    display: none;
-    // height: 90%;
-  }
-}
 .reviewbox textarea {
   margin: 0;
   height: 90%;
@@ -167,6 +132,10 @@ h2 {
   border: none;
   margin: 0 0 0 auto;
 }
+.nameAndBtn {
+  // display: flex;
+}
+
 .btn {
   display: flex;
 }
@@ -176,8 +145,45 @@ h2 {
   border: none;
   color: white;
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1140px) {
+  .profile {
+    flex-flow: column;
+    transition: 0.5s;
+  }
+  .person {
+    flex-flow: column;
+    transition: 0.5s;
+  }
+  .meminfo2 {
+    text-align: center;
+    transition: 0.5s;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contents {
+    width: 400px;
+    transition: 0.5s;
+  }
+  .reviewbox {
+    display: none;
+    transition: 0.5s;
+  }
   .seereview {
     display: block;
+    transition: 0.5s;
+  }
+  .meminfo2 {
+    text-align: center;
+    transition: 0.5s;
+  }
+  button {
+    font-size: 16px;
+    width: 80px;
+    height: 32px;
+    transition: 0.5s;
+  }
+  h2 {
+    font-size: 16px;
+    transition: 0.5s;
   }
 }
