--- a/src/style/mypagestyle/SignOut.module.css
+++ b/src/style/mypagestyle/SignOut.module.css
@@ -35,7 +35,7 @@
   height: 150px;
   background-image: url("../../img/mypageimg/delete.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   margin: 20px 0;
 }
 input {
