--- a/src/style/mypagestyle/MypageStyle.scss
+++ b/src/style/mypagestyle/MypageStyle.scss
@@ -80,9 +80,9 @@ h2 {
   color: white;
 }
 .nameAndBtn span {
-  color: #000000;
+  color: rgba(255, 255, 255, 0.9);
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
 }
 .alinfo {
   display: flex;
