--- a/src/style/liststyle/ListModalApi.module.css
+++ b/src/style/liststyle/ListModalApi.module.css
@@ -7,15 +7,16 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* 검은색 반투명 배경 */
+  background-color: rgba(0, 0, 0, 0.1); /* 검은색 반투명 배경 */
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 100; /* 모달보다 뒤에 있도록 설정 */
 }
 .modal {
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(255, 255, 255);
   border-radius: 8px;
+  border: 1px solid #000;
   padding: 20px;
   max-width: 400px;
   width: 90%;
@@ -30,11 +31,11 @@ body {
 }
 .modalTitle {
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  color: #000;
 }
 .modalText {
   font-size: 15px;
-  color: rgb(255, 255, 255);
+  color: #000;
 }
 
 .closeButton {
